# scout-dog-walk

./: .gitignore  CMakeLists.txt  README.md  package.xml  start.sh
docs/: PITCH.md
launch/: dog_walk.launch.py  dog_walk_sim.launch.py
scripts/: dog_walk_node.py  run_full_demo.sh  run_sim_demo.sh  run_web_only.sh  web_server.py
web/: index.html  pitch.html  showcase.html
