<?xml version="1.0"?>
<package format="3">
  <name>scout_dog_walk</name>
  <version>0.1.0</version>
  <description>Scout Mini guided dog-walk demo for ROS 2 Jazzy.</description>
  <maintainer email="guliwa@example.com">guliwa</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>scout_base</exec_depend>
  <exec_depend>scout_description</exec_depend>
  <exec_depend>scout_gazebo_sim</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
